# rust-battery

./: Cargo.toml  README.md
battery/: Cargo.toml
battery/src/: errors.rs  lib.rs
battery/src/platform/: mod.rs  traits.rs
battery/src/platform/linux/: device.rs
battery/src/platform/linux/sysfs/: fs.rs
battery/src/types/: technology.rs
examples/: simple.rs
src/: errors.rs  lib.rs  units.rs
src/platform/darwin/: device.rs  iterator.rs  manager.rs  tests.rs  traits.rs
src/platform/darwin/iokit/: sys.rs  wrappers.rs
src/platform/linux/: device.rs  iterator.rs  manager.rs
src/platform/linux/sysfs/: fs.rs  source.rs
src/platform/linux/tests/: issue_28.rs  issue_40.rs
src/platform/windows/: iterator.rs  manager.rs
src/types/: battery.rs  manager.rs  state.rs  technology.rs
