[package]
name = "battery"
version = "0.7.8"                                                          # remember to update html_root_url
authors = ["svartalf <self@svartalf.info>", "Robin Ohs <me@robinohs.dev>"]
edition = "2024"
description = "Cross-platform information about the notebook batteries"
repository = "https://github.com/svartalf/rust-battery"
readme = "README.md"
categories = ["os"]
keywords = ["battery", "linux", "macos", "windows"]
license = "Apache-2.0 OR MIT"
build = "build.rs"

[dependencies]
cfg-if = "^1.0"
num-traits = { version = "^0.2", default-features = false }
uom = "^0.37"

[target.'cfg(target_os = "linux")'.dependencies]
lazycell = "~1.3"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
libc = "^0.2"
mach2 = "^0.4"
core-foundation = "^0.10"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = [
    "impl-default",
    "devguid",
    "winbase",
    "ioapiset",
    "ntdef",
    "setupapi",
    "handleapi",
    "errhandlingapi",
    "winerror",
] }

[dev-dependencies]
tempfile = "^3.20"
approx = "^0.5"
