[package]
name = "battery"
version = "0.7.8"                                                       # remember to update html_root_url
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform information about the notebook batteries"
repository = "https://github.com/svartalf/rust-battery"
readme = "README.md"
categories = ["os"]
keywords = ["battery", "linux", "macos", "windows"]
license = "Apache-2.0 OR MIT"
build = "build.rs"

[badges]
travis-ci = { repository = "svartalf/rust-battery", branch = "master" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "svartalf/rust-battery" }
is-it-maintained-open-issues = { repository = "svartalf/rust-battery" }

[dependencies]
cfg-if = { workspace = true }
num-traits = { workspace = true }
uom = { workspace = true, features = ["autoconvert"] }

[target.'cfg(target_os = "linux")'.dependencies]
lazycell = "~1.3"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
libc = "^0.2"
mach = "^0.3"
core-foundation = "0.9.4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = [
    "impl-default",
    "devguid",
    "winbase",
    "ioapiset",
    "ntdef",
    "setupapi",
    "handleapi",
    "errhandlingapi",
    "winerror",
] }

[dev-dependencies]
tempfile = { workspace = true }
approx = { workspace = true }
